<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".admin.problems.AdminProblemDetailsFragment">

        <TextView
            android:id="@+id/tvProblemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_bold"
            android:textSize="23sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvReportedByAuthor"
                android:layout_width="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_height="wrap_content"
                android:text="@string/reported_by"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvProblemAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#4286F4"
                android:textSize="13sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvStareProblema"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stare_problem"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tvNrSemnaturi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_signatures"
            android:layout_marginTop="8dp"
            android:textSize="15sp"/>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="15dp"
            android:id="@+id/recyclerViewPictures"
            app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"/>


        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/tvProblemDescription"
            android:layout_marginBottom="8dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvProblemCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tvProblemAddressSector"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_height="wrap_content" />

        <fragment
            android:id="@+id/map"
            app:layout_constraintStart_toStartOf="parent"
            android:name="com.example.licentaagain.views.WorkaroundMapFragment"
            android:layout_width="match_parent"
            android:layout_height="400dp" />
        <Button
            android:id="@+id/btnOpenInGoogleMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_in_google_maps"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:iconSize="14dp"
            app:iconTint="@null"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            app:icon="@drawable/ic_google_maps"/>

        <TextView
            android:id="@+id/tvFacebookLink"
            android:text="@string/link_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/tvNrSemnatariHeading"
            android:layout_marginTop="20dp"
            android:text="@string/semnatari"
            android:layout_marginBottom="15dp"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSemnatariList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/btnClose"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/close"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.TonalButton"
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/sterge"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintEnd_toStartOf="@id/btnEdit"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_marginBottom="120dp"
            android:layout_marginEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp" />

    </LinearLayout>

</ScrollView>