<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:paddingBottom="90dp"
            android:orientation="vertical"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".problem.AddProblemFragment">

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/tvHeading"
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_bold"
                android:textSize="18sp"
                android:text="@string/add_problem" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfTitle"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tvHeading"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/title"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:cursorColor="@color/primaryPurple">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfDescription"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tfTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/description"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:cursorColor="@color/primaryPurple">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/in_what_sector_is_problem"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body1"
            />

        <Spinner
            android:id="@+id/spnSector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tfDescription"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <fragment
            android:id="@+id/autocomplete_fragment"
            app:layout_constraintTop_toBottomOf="@+id/spnSector"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <fragment
            android:id="@+id/map"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/autocomplete_fragment"
            android:name="com.example.licentaagain.views.WorkaroundMapFragment"
            android:layout_width="match_parent"
            android:layout_height="400dp" />

        <TextView
            android:text="@string/select_category"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body1" />

        <Spinner
            android:id="@+id/spnCategorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/map"/>

        <TextView
        android:id="@+id/tvAddFacebookGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/do_you_want_fb_group"
        android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfFacebookLink"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tvHeading"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/link_fb"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:cursorColor="@color/primaryPurple">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFacebookLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btnTakePhoto"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    app:icon="@drawable/ic_add_photo"
                    android:text="@string/take_picture"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:id="@+id/btnAddPictures"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_pictures"
                    app:icon="@drawable/ic_photo_library" />


            </LinearLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSelectedImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:orientation="horizontal"/>


        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/loadingOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/tvUploading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBar"
            android:layout_centerHorizontal="true"
            android:text="Uploading problem..."
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp" />

    </RelativeLayout>

</FrameLayout>
