<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".account.reported_problems.gathering_signatures.GSProblemDetailsFragment">

    <LinearLayout
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvProblemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_bold"
            android:textSize="23sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="10dp"
            android:id="@+id/recyclerViewPictures"
            app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"/>


        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/tvProblemDescription"
            android:layout_marginBottom="8dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvStare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Stare curenta: "
            android:layout_marginBottom="8dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tvProblemCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textSize="15sp"
            android:text="@string/categorie" />

        <TextView
            android:id="@+id/tvProblemAddressSector"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:layout_height="wrap_content" />

        <fragment
            android:id="@+id/map"
            app:layout_constraintStart_toStartOf="parent"
            android:name="com.example.licentaagain.views.WorkaroundMapFragment"
            android:layout_width="match_parent"
            android:layout_height="400dp" />
        <Button
            android:id="@+id/btnOpenInGoogleMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_in_google_maps"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:iconSize="14dp"
            app:iconTint="@null"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            app:icon="@drawable/ic_google_maps"/>

        <TextView
            android:id="@+id/tvFacebookLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/link_fb"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/tvNrSemnatariHeading"
            android:text="@string/semnatari"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSemnatariList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/btnClose"
                style="@style/Widget.Material3.Button.TextButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTakeAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/primaryPurple"
                android:checkable="true"
                android:text="Generează mail"
                app:iconTint="@color/white"
                app:strokeColor="@color/primaryPurple"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnClose"
                app:strokeWidth="2dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</ScrollView>