<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".user_page.ProblemListByUserFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvHeadingGatheringSignatures"
            android:text="@string/problems_gathering_signatures"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProblemsGS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:scrollbars="vertical"
            android:paddingBottom="50dp"/>

        <TextView
            android:id="@+id/tvHeadingProblemsSent"
            android:text="@string/problems_sent_to_authorities"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProblemsSent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:scrollbars="vertical"
            android:paddingBottom="50dp"/>

        <TextView
            android:id="@+id/tvHeadingSolvedProblems"
            android:text="@string/problems_solved"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProblemsSolved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:scrollbars="vertical"
            android:paddingBottom="150dp"/>

    </LinearLayout>
</ScrollView>